  the number of variables if the corresponding constraint supports this (optional) callbacks
- new method SCIPisUpdateUnreliable() to check whether an iteratively updated value should be recomputed from scratch
  (e.g., for activities; uses new parameter misc/num_recompfac)
- new method SCIPgetActiveVars() in scip.{h,c}, which returns for a given array of variables the active counterparts

performance improvements:
- improved scaling of linear constraints, linear constraints with integral variables will now be scale with
  1e+06/MAX(maximal absolute coefficient, 1.0) instead of 1e+03/MAX(maximal absolute coefficient, 1.0);
  if all coefficients are in absolute value equal they will be scaled by that
- if probing reached the end of all variables it will restart the probing cycle correctly
- improved intdiving heuristic by activating backtracking to a different fixing value
- improved scaling by choosing the smallest scaler
- if first root lp is solved and the optimality is rejected by SCIP, there won't be an unnecessary solving of the lp
  from scratch again
- automatically turn off separation in sepa_oddcycle if it was too unsuccessful within the last calls
- use faster Dijkstra variants in sepa_oddcycle
- improved pseudo objective propagator

plugins:
- added new presolver convertinttobin, which converts bounded integer variables to their binary representation, e.g.
  for integer variable 0 <= x <= 10 the binary variables y0, y1, y2, and y3 are created, such that
  1 y0 + 2 y1 + 4 y2 + 8 y3 <= 10 and x = 1 y0 + 2 y1 + 4 y2 + 8 y3

fixed bugs:
- fixed minor bugs with respect to counting generated and lifted cuts in sepa_oddcycle
- fixed bug in heur_zirounding with computation of up/downslacks
- fixed bug in cons_linear w.r.t recalculation of unreliable activities

parameters:
- new parameter <presolving/convertinttobin/maxdomainsize> by default is set to SCIP_LONGINT_MAX, which deternmines