@@ -295,6 +295,7 @@ SCIP_RETCODE SCIPprobCreate(
    (*prob)->deletedvars = NULL;
    (*prob)->deletedvarssize = 0;
    (*prob)->ndeletedvars = 0;
+   (*prob)->nobjvars = 0;
    if( set->misc_useconstable )
    {
       SCIP_CALL( SCIPhashtableCreate(&(*prob)->consnames, blkmem,
@@ -458,6 +459,7 @@ SCIP_RETCODE SCIPprobTransform(
       SCIP_CALL( SCIPvarRelease(&targetvar, blkmem, set, eventqueue, NULL) );
    }
    assert((*target)->nvars == source->nvars);
+   assert((*target)->nobjvars == SCIPprobGetNObjVars(*target, set));
 
    /* call user data transformation */
    if( source->probtrans != NULL )
@@ -779,6 +781,9 @@ SCIP_RETCODE SCIPprobAddVar(
       /* issue VARADDED event */
       SCIP_CALL( SCIPeventCreateVarAdded(&event, blkmem, var) );
       SCIP_CALL( SCIPeventqueueAdd(eventqueue, blkmem, set, NULL, NULL, NULL, eventfilter, &event) );
+
+      /* update the number of variables with non-zero objective coefficient */
+      SCIPprobUpdateNObjVars(prob, set, 0.0, SCIPvarGetObj(var));
    }
 
    return SCIP_OKAY;
@@ -1275,6 +1280,25 @@ SCIP_RETCODE SCIPprobCheckObjIntegral(
    return SCIP_OKAY;
 }
 
+/** update the number of variables with non-zero objective coefficient */
+void SCIPprobUpdateNObjVars(
+   SCIP_PROB*            prob,               /**< problem data */
+   SCIP_SET*             set,                /**< global SCIP settings */
+   SCIP_Real             oldobj,             /**< old objective value for variable */
+   SCIP_Real             newobj              /**< new objective value for variable */
+   )
+{
+   assert(prob->transformed);
+
+   if( !SCIPsetIsZero(set, oldobj) )
+      prob->nobjvars--;
+
+   if( !SCIPsetIsZero(set, newobj) )
+      prob->nobjvars++;
+
+   assert(prob->nobjvars == SCIPprobGetNObjVars(prob, set));
+}
+
 /** if possible, scales objective function such that it is integral with gcd = 1 */
 SCIP_RETCODE SCIPprobScaleObj(
    SCIP_PROB*            prob,               /**< problem data */
@@ -1376,7 +1400,7 @@ SCIP_RETCODE SCIPprobScaleObj(
                   for( v = 0; v < nints; ++v )
                   {
                      SCIPdebugMessage(" -> var <%s>: newobj = %.6f\n", SCIPvarGetName(prob->vars[v]), objvals[v]);
-                     SCIP_CALL( SCIPvarChgObj(prob->vars[v], blkmem, set, primal, lp, eventqueue, objvals[v]) );
+                     SCIP_CALL( SCIPvarChgObj(prob->vars[v], blkmem, set, prob, primal, lp, eventqueue, objvals[v]) );
                   }
                   prob->objoffset *= intscalar;
                   prob->objscale /= intscalar;
@@ -1540,6 +1564,26 @@ SCIP_PROBDATA* SCIPprobGetData(
    assert(prob != NULL);
 
    return prob->probdata;
+}
+
+/** returns the number of variables with non-zero objective coefficient */
+int SCIPprobGetNObjVars(
+   SCIP_PROB*            prob,               /**< problem data */
+   SCIP_SET*             set                 /**< global SCIP settings */
+   )
+{
+   int nobjvars;
+   int v;
+
+   nobjvars = 0;
+
+   for( v = 0; v < prob->nvars; ++v )
+   {
+      if( !SCIPsetIsZero(set, SCIPvarGetObj(prob->vars[v])) )
+         nobjvars++;
+   }
+
+   return nobjvars;
 }
 
 /** returns the external value of the given internal objective value */
